Fix build warnings in a few classes due to deprication